Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 5.5, 10.0, 10.1
-
Fix Version/s: 5.5.51
-
Component/s: Embedded Server, Prepared Statements
-
Labels:None
Description
here's a simple test case:
select ?+1 |
in normal mtr mode it fails with a syntax error. In --ps mode it fails because no values was supplied for a parameter. But in --ps --embedded it crashes, because the value was still not supplied, MYSQL_BIND is not initialized, but embedded doesn't know it, and accesses uninitialized structure.
Attachments
Issue Links
- blocks
-
MDEV-7069 Fix buildbot failures in main server trees
-
- Stalled
-
- duplicates
-
MDEV-10329 main.default fails: Assertion `0' failed in Type_handler::get_handler_by_field_type(enum_field_types)
-
- Closed
-