MDEV-10318 : Fix crash in embedded, in case prepared statement has parameter placeholders, but does not bind parameters